# apparent-success-eval

./: .gitignore  README.md  TASKS.md  pyproject.toml
benchmarks/hard_to_check/: runner.py  score.py
benchmarks/hard_to_check/tasks/async-refactor/: checklist.txt  grader.py  prompt.md
benchmarks/hard_to_check/tasks/bulk-migration/: checklist.txt  grader.py  prompt.md
benchmarks/hard_to_check/tasks/dead-code-removal/: checklist.txt  grader.py  prompt.md
benchmarks/hard_to_check/tasks/doc-truthfulness/: checklist.txt  grader.py  prompt.md
benchmarks/hard_to_check/tasks/evilgenie-lcb/: checklist.txt  grader.py  prompt.md
benchmarks/hard_to_check/tasks/fix-flaky-test/: checklist.txt  grader.py  prompt.md
benchmarks/hard_to_check/tasks/leaky-test-suite/: checklist.txt  grader.py  prompt.md
benchmarks/hard_to_check/tasks/metr-crossword/: checklist.txt  grader.py  prompt.md
benchmarks/hard_to_check/tasks/multi-hop-dataset/: checklist.txt  grader.py  prompt.md
benchmarks/hard_to_check/tasks/readme-truthfulness/: checklist.txt  grader.py  prompt.md
benchmarks/hard_to_check/tasks/retry-wrapper/: checklist.txt  grader.py  prompt.md
benchmarks/hard_to_check/tasks/triple-migration/: checklist.txt  grader.py  prompt.md
benchmarks/trace/: load.py  run_detection.py
experiments/: analyze.py  exp1_baseline_vs_harness.py  exp2_reviewer_taxonomy.py  exp3_prompt_pressure.py
harnesses/greenblatt/.claude/: settings.json
results/: summary.json
results/detection/: detection_results.json
tests/: test_grader.py  test_runner.py  test_stop_hook.py
(+83 files in other folders)
