[project]
name = "apparent-success-eval"
version = "0.1.0"
description = "Implement and verify Greenblatt's apparent-success-seeking mitigations on Claude Code."
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.40",
    "datasets>=3.0,<4.0",
    "scipy>=1.13",
    "numpy>=2.0",
    "rich>=13.7",
    "httpx>=0.27",
    "requests>=2.32",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.uv]
package = false
